# ui-ai-helper

./: .gitignore  AGENTS.md  README.md  idea.md  package-lock.json  package.json  plan.md
.agents/skills/use-ui-helper/: SKILL.md
apps/desktop/: index.html  package.json
apps/desktop/src/: App.css  App.tsx  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: api.rs  capture.rs  config.rs  lib.rs  main.rs  state.rs
apps/desktop/src/components/: OverlayCanvas.tsx  TitleBar.tsx
